Java 11 changes